added script to html and added API key to fetchWeatherData function

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     </div>
 
     <!-- Add JavaScript script -->
+    <script src="script.js"></script>
     <script>
         // Define API key variable for the OpenWeather API
         const apiKey = '0e6c7f3a3e6cc010b40e84fa4133a8ca';
